tests/valid/core/execute-oneshot.coil
' @test valid
' @covers EXECUTE, USING, TOOLS, WAIT
' @description One-shot tool execution with arguments

RECEIVE url
END

TOOLS load_article

EXECUTE article
  USING !load_article
  - url: $url
  - format: "markdown"
END

WAIT
  ON ?article
END

EXIT
