tests/invalid/undeclared-tool.coil
' @test invalid
' @error preparation
' @rule undeclared-tool
' @covers TOOLS, EXECUTE
' @description Using !name without declaring in TOOLS

EXECUTE results
  USING !search
  - query: "test"
END
